try to make server run on Java17
reference: https://github.com/embeddedt/ModernFix/wiki/1.16---required-arguments-for-Java-17